force-app/main/default/objects/IMT_Metrics__c/IMT_Metrics__c.object-meta.xml
<CustomObject>
    <description>Used for tracking IMT Metrics</description>
    <label>Metrics</label>
    <nameField>
        <displayFormat>IMT-{0000}</displayFormat>
        <label>IMT Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>