force-app/main/default/objects/IMT_Metrics__c/fields/IMT_Planned_Properties__c.field-meta.xml
<CustomField>
    <fullName>IMT_Planned_Properties__c</fullName>
    <label>Planned Properties</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>