force-app/main/default/objects/IMT_Metrics__c/fields/IMT_Region__c.field-meta.xml
<CustomField>
    <fullName>IMT_Region__c</fullName>
    <description>Region</description>
    <inlineHelpText>Select the region for the metric</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Americas</fullName>
            </value>
            <value>
                <fullName>Asia, Middle East, Africa</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Greater China</fullName>
            </value>
            <value>
                <fullName>InterContinental Hotels Group</fullName>
                <default>true</default>
                <label>InterContinental Hotels Group</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>