force-app/main/default/objects/IMT_Metrics__c/fields/IMT_Reservations__c.field-meta.xml
<CustomField>
    <fullName>IMT_Reservations__c</fullName>
    <inlineHelpText>Total number of reservations</inlineHelpText>
    <label>Reservations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>