force-app/main/default/objects/IMT_Metrics__c/fields/IMT_Status__c.field-meta.xml
<CustomField>
    <fullName>IMT_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Property Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>