force-app/main/default/objects/IMT_Metrics__c/fields/Survey_Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>Survey_Overall_Score__c</fullName>
    <inlineHelpText>Overall survey score for month</inlineHelpText>
    <label>Survey Overall Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>