force-app/main/default/objects/IMT_Metrics__c/recordTypes/InterContinental_Hotels_Group.recordType-meta.xml
<RecordType>
    <fullName>InterContinental_Hotels_Group</fullName>
    <active>true</active>
    <description>KPI Metrics for the IHG GRS Project</description>
    <label>InterContinental Hotels Group KPI</label>
</RecordType>