force-app/main/default/objects/IMT_Metrics__c/recordTypes/InterContinental_Hotels_Group_Baseline.recordType-meta.xml
<RecordType>
    <fullName>InterContinental_Hotels_Group_Baseline</fullName>
    <active>true</active>
    <description>Baseline # for the IHG GRS Project.  To be manually entered by someone with the Global Super User profile</description>
    <label>InterContinental Hotels Group Baseline</label>
</RecordType>