force-app/main/default/objects/IMT_Metrics__c/recordTypes/InterContinental_Hotels_Group_SLA.recordType-meta.xml
<RecordType>
    <fullName>InterContinental_Hotels_Group_SLA</fullName>
    <active>true</active>
    <description>SLA Metrics for InterContinental IHG GRS Project</description>
    <label>InterContinental Hotels Group SLA</label>
</RecordType>